--- a/src/App.css
+++ b/src/App.css
@@ -3,10 +3,10 @@
     margin: 10px auto;
     display: block;
     width: 100%;
+    height: 70vh;
     background: darkgrey;
     border: black solid 5px;
     overflow: scroll;
-    transform: scale();
 }
 
 .test {
@@ -39,6 +39,10 @@
     margin: 10px auto;
     width: 90%;
     height: 100vh;
+}
+
+.Simple-diagram {
+    height: 1000px;
 }
 
 /*.storm {*/
